--- a/sdi-project2.html
+++ b/sdi-project2.html
@@ -11,12 +11,10 @@
     <h2>Project 2</h2>
 </header>
 <article>
-<p>In this space you should provide a short (one paragraph) explanation of your theme and why you chose it.</p>
-<p>You may also use this space to explain any elements of your code story that may not be entirely clear.  For example, if your theme is thirteenth century Italian poetry, not everyone may be familiar with that.</p>
-<p>Don't forget to replace all of the capitalized elements in this template with your information.  Your term number should be in a <em>yymm</em> format, including the year and the month.</p>
+<p>For this project I decided to write my story about one of the most important things in my life, and that is my dog Ryder. He is not only my pet, he is a member of my family, and one of my best friends. When I got him, I was not even looking to buy a dog, but as soon as I saw him I instantly fell in love. I couldn't imagine not taking him home with me, so I adopted him. He is the best dog ever. He's so smart and loyal, and he always makes me feel better when I'm upset or stressed. He's a rat terrier, and is currently 2 years old.</p>
 </article>
 <footer>
-    <p>COMPLETION DATE, Brandon Ruger</p>
+    <p>6/13/2013, Brandon Ruger</p>
 </footer>
 <script type="text/javascript" src="ruger_brandon_assignment2.js"></script>
 </body>
